Fixes for header alignment #392

--- a/components/byu-header/byu-header-extras.scss
+++ b/components/byu-header/byu-header-extras.scss
@@ -71,13 +71,11 @@ byu-header:not(.byu-component-rendered) > [slot="site-title"].subtitle {
 
 // BYU icon
 byu-header:not(.byu-component-rendered) > [slot="site-title"]:before {
-  content: url(https://cdn.byu.edu/shared-icons/latest/logos/monogram-white.svg);
+  background-image: url(https://cdn.byu.edu/shared-icons/latest/logos/monogram-white.svg);
   height: 19px;
   width: 66px;
-  margin: 19.5px 0;
-  margin-right: 8px;
-  position: relative;
-  top: 1px;
+  margin: 19.5px 8px 19.5px 0;
+  content: ' ';
 }
 
 //BYU-HEADER FULL-WIDTH ATTRIBUTE
